--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ Django = "^4.0.2"
 djangorestframework = "^3.13.1"
 
 [tool.poetry.dev-dependencies]
+pylint-django = "^2.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pylint.master]
+load-plugins = "pylint_django"
