add & run black and remove drf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,37 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
-name = "todo_list"
+name = "todo-list"
 version = "0.1.0"
 description = ""
 authors = ["Bilal Leadbitter <bilal.leadbitter@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+packages = [{include = "todo_list"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-Django = "^4.0.2"
-djangorestframework = "^3.13.1"
+python = "^3.10"
+Django = "^4.0.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint-django = "^2.5.2"
+black = "^22.1.0"
+pylint = "^2.12.2"
+isort = "^5.10.1"
+ptpython = "^3.0.20"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.isort]
+profile = "black"
 
 [tool.pylint.master]
 load-plugins = "pylint_django"
+django-settings-module = "todo_list.settings"
+
+[tool.pylint.messages_control]
+disable = [
+    "missing-module-docstring",
+    "missing-class-docstring",
+    "missing-function-docstring",
+]
