--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ packages = [{include = "todo_list"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.3"
+ward = "^0.66.0-beta.0"
+flake8 = "^4.0.1"
+pydantic = "^1.9.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint-django = "^2.5.2"
